@@ -9,22 +9,22 @@ Two optimisations are implemented, as an example:
 * Merging of consecutive StringBuilder.append calls with constant strings 
 e.g. sb.append("foo").append("bar") -> sb.append("foobar");
 
-The optimiser uses the Java Class-File API (JEP 457 / 466 / 484) that is currently in 
-preview in Java 23 and targeted for Java 24. The Optimizer.java source file is self-contained
-and does not require any external dependencies apart from the Java 23 standard library.
+The optimiser uses the Java Class-File API (JEP 457 / 466 / 484) released
+in final form in Java 24. The Optimizer.java source file is self-contained
+and does not require any external dependencies apart from the Java 24 standard library.
 
 # Run
 
-You'll need JDK 23, the easiest way to install this, on Linux, is with [SDK man](https://sdkman.io/):
+You'll need JDK 24, the easiest way to install this, on Linux, is with [SDK man](https://sdkman.io/):
 
 ```shell
-sdk install java 23-open
+sdk install java 24.ea.36-open
 ```
 
 You can run the optimizer directly from source using the java command:
 
 ```shell
-$ java --enable-preview Optimizer.java input.jar output.jar
+$ java Optimizer.java input.jar output.jar
 ```
 
 # Test case
@@ -33,8 +33,8 @@ The TestJarGenerator.java can generate a test jar to showcase the two optimisati
 that are applied:
 
 ```shell
-$ java --enable-preview TestJarGenerator.java test.jar
-$ java --enable-preview Optimizer.java test.jar optimized.jar
+$ java TestJarGenerator.java test.jar
+$ java Optimizer.java test.jar optimized.jar
 $ java -jar test.jar
 $ java -jar optimized.jar
 ```
